--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
-        "pusher/pusher-php-server": "^6.1"
+        "pusher/pusher-php-server": "^6.1",
+        "stripe/stripe-php": "^7.78"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
